test/should_fail/tuple_union_fail.erl
-module(tuple_union_fail).

-export([f/0]).

-spec f() -> {integer()} | {boolean()}.
f() ->
    {apa}.
